syntax = "proto3";

package delivery.v1;

option go_package = "github.com/bilalabdelkadir/chis/internal/pb/delivery";

service DeliveryService {
  rpc QueueMessage (QueueMessageRequest) returns (QueueMessageResponse);
}

enum HttpMethod {
  HTTP_METHOD_UNSPECIFIED = 0;
  GET = 1;
  POST = 2;
  PUT = 3;
  DELETE = 4;
}


message QueueMessageRequest {
  string url     = 1;
  HttpMethod method  = 2;
  bytes  payload = 3;
  string org_id  = 4;
}

message QueueMessageResponse {
  string message_id = 1;
  string status     = 2;
}
